# gemmanet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
deploy/: Caddyfile.domains  Caddyfile.full  Caddyfile.production
docs/: api_reference.md  architecture.md  examples.md  index.md  privacy.md  quickstart.md  terms.md
examples/: client_demo.py  demo_translate_app.py  echo_node.py  ollama_node.py  openai_compat_demo.py  streaming_demo.py  translate_node.py
seeds/: chat_seed.py  echo_seed.py  translate_seed.py
src/gemmanet/: __init__.py
src/gemmanet/coordinator/: __init__.py  auth.py  registry.py  reputation.py  router.py  server.py  ws_manager.py
src/gemmanet/credits/: __init__.py  database.py  models.py  service.py
src/gemmanet/dashboard/: __init__.py  app.py
src/gemmanet/dashboard/templates/: base.html  index.html
src/gemmanet/forum/: __init__.py  app.py  database.py
src/gemmanet/integrations/: __init__.py  ollama.py
src/gemmanet/sdk/: __init__.py  client.py  exceptions.py  models.py  node.py
tests/: __init__.py  mock_ollama.py  test_credits.py  test_e2e.py  test_integration.py  test_models.py  test_ollama_integration.py  test_reputation.py  test_router.py
website/: index.html
